--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="treat-wrapper">
         <button class="treat-button" onclick="playthe();">PLAY</button>
-      </div>
+       <!-- <p style="color:white; text-align: center; display: flex;" >🐍 Use the keyboard or button on the screen 🐍</p> -->
+    </div>
     <script src="frontpage.js"></script>
 </body>
 </html>
